# amazon-braket-simulator-v2-python

./: .coveragerc  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements-test.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: benchmark.yml  check-format.yml  publish-to-pypi.yml  python-package.yml  stale_issue.yml  twine-check.yml
benchmark/: benchmark.py  output.json  pl_benchmark.py
dev/bench/: data.js
doc/: Makefile  conf.py  index.rst
notebooks/: ahs_tn_simulator.ipynb
src/braket/: juliapkg.json  version.py
src/braket/ahs_tn_simulator/: __init__.py  ahs_simulator.py  ahs_utils.py  julia_import.py  results_utils.py  runner.py
src/braket/simulator_v2/: __init__.py  _version.py  base_simulator_v2.py  density_matrix_simulator_v2.py  julia_import.py  julia_workers.py  simulator.py  simulator_common.py  state_vector_simulator_branched.py  state_vector_simulator_v2.py
test/integ_tests/braket/simulator_v2/: gate_model_device_testing_utils.py  test_local_braket_simulator.py  test_local_noise_simulator.py
test/unit_tests/braket/simulator_v2/: device_property_jsons.py  test_density_matrix_simulator.py  test_density_matrix_simulator_v2.py  test_pennylane.py  test_qiskit_provider.py  test_state_vector_simulator.py  test_state_vector_simulator_v2.py
