[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-braket-simulator-v2"
description = "Local simulation of quantum circuits"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.entry-points."braket.simulators"]
braket_sv_v2 = "braket.simulator_v2.state_vector_simulator_v2:StateVectorSimulatorV2"
braket_dm_v2 = "braket.simulator_v2.density_matrix_simulator_v2:DensityMatrixSimulatorV2"

[tool.setuptools]
include-package-data=false
package-data = {"*" = ["*.json"]}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = { file = "requirements-test.txt" }

[tool.isort]
profile = "black"
