[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "amazon-braket-simulator-v2"
description = "Local simulation of quantum circuits"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent"
]
dynamic = ["version", "dependencies", "optional-dependencies"]

[project.entry-points."braket.simulators"]
braket_sv_v2 = "braket.simulator_v2.state_vector_simulator_v2:StateVectorSimulatorV2"
braket_dm_v2 = "braket.simulator_v2.density_matrix_simulator_v2:DensityMatrixSimulatorV2"

[tool.setuptools]
include-package-data=false
package-data = {"*" = ["*.json"]}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
optional-dependencies.test = { file = "requirements-test.txt" }


[tool.ruff]
target-version = "py39"
line-length = 100
format.preview = true
format.docstring-code-line-length = 100
format.docstring-code-format = true
lint.select = [
  "ALL",
]
lint.ignore = [
  "ANN101",  # Missing type annotation for `self` in method
  "ANN102",  # Missing type annotation for `cls` in classmethod"
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed in `arg`"
  "BLE001",  # This needs to be cleaned up later.
  "COM812",  # conflicts with formatter
  "CPY",     # No copyright header
  "D",       # ignore documentation for now
  "D203",    # `one-blank-line-before-class` (D203) and `no-blank-line-before-class` (D211) are incompatible
  "D212",    # `multi-line-summary-first-line` (D212) and `multi-line-summary-second-line` (D213) are incompatible
  "DOC201",  # no restructuredtext support yet
  "DOC402",  # no restructuredtext support yet
  "DOC501",  # broken with sphinx docs
  "INP001",  # no implicit namespaces here
  "ISC001",  # conflicts with formatter
  "PLR0914", ## Too many local variables
  "PLR0917", ## Too many positional arguments
  "PLW0603", # Allow usage of global vars
  "S104",    # Possible binding to all interfaces
  "S404",    # Using subprocess is alright.
  "S603",    # Using subprocess is alright.
]
lint.per-file-ignores."tests/**/*.py" = [
  "D",       # don't care about documentation in tests
  "FBT",     # don"t care about booleans as positional arguments in tests
  "INP001",  # no implicit namespace
  "PLR2004", # Magic value used in comparison, consider replacing with a constant variable
  "S101",    # asserts allowed in tests...
  "S603",    # `subprocess` call: check for execution of untrusted input
]
lint.isort = { known-first-party = [
  "simulator_v2",
  "tests",
] }
lint.preview = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
mypy-init-return = false
